--- a/static/scss/_responsive.scss
+++ b/static/scss/_responsive.scss
@@ -42,13 +42,13 @@
 @media ($md-query) {
 
 	#deck-nav{
-		height: 250px;
+		height: 150px;
 		padding: 30px 60px 30px 60px;
 	}
 
 	#deck-slick{
 		button{
-			bottom: -60px;
+			bottom: -55px;
 			left: 20px;
 			width: 20px;
 			height: 20px;
@@ -105,8 +105,10 @@
 			border: none !important;
 
 			a{
+				color: $dark;
+
 				span {
-					margin-top:10px;
+					margin-top:5px;
 				}
 
 				content: '.';
